--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 body{
     overflow:hidden;
 font-family: sans-serif;
@@ -373,7 +377,9 @@ right: 5px;
 bottom: 2px;
 overflow-y: scroll;
 }
-
+.notes{
+font-size:0.8em;
+}
 .file_group{
 border: 1px solid #900;
 padding: 2px;
@@ -414,6 +420,9 @@ text-align:left;
 .file_brick[tet]:not([active]):not(:hover){
 width: 2px;
 font-size:0;
+}
+input[type="text"]{
+padding: 3px 0px 3px 0px;
 }
 #header_search{
 float: right;
