parsefiles now using bridgedwoker + minor bugfixs

--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ text-align: center;
 background-color:rgba(255,255,255,0.5);
 border: 1px solid #FFAD33;
 }
-.tile:hover not:[moving]{
+.tile:hover:not([moving]){
 background: #888;
 border-color: #FFAD33;
 }
