reorder amps bugifx and initial screen changes

--- a/main.css
+++ b/main.css
@@ -539,3 +539,9 @@ pre{
 font-size: 1.2em;
 margin-left: 15px;
 }
+#filesystem_buttons{
+position: absolute;
+left: 20px;
+bottom: 20px;
+text-align: left;
+}
