--- a/main.css
+++ b/main.css
@@ -161,10 +161,12 @@ bottom: 0px;
 position: absolute;
 bottom: 5px;
 left: 5px;
-right: 5px;
+right: 47px;
 text-align: center;
-background-color:rgba(255,255,255,0.8);
-border: 1px solid #FFAD33;
+background-color:rgba(255,255,255,0.85);
+/*border: 1px solid #FFAD33;*/
+padding-top: 3px;
+padding-bottom: 3px;
 }
 .tile:hover:not([moving]):not([splitting]){
 background: #ccc;
@@ -655,10 +657,20 @@ border: 1px solid #000;
 }
 .tile-buttons{
 position: absolute;
-right: 0px;
-top: 0px;
+right: 5px;
+top: 5px;
+bottom: 5px;
 text-align: right;
+background-color:rgba(255,255,255,0.85);
 }
+
+.grabbed_info .tile-buttons{
+display: none;
+}
+.grabbed_info .tile-caption{
+right: 5px;
+}
+
 .tile-button-swap,
 .tile-button-dest,
 .tile-button-src{
