--- a/main.css
+++ b/main.css
@@ -14,7 +14,6 @@ body{
     overflow:hidden;
 font-family: sans-serif;
 font-size: 0.8em;
-background: #c77;
 }
 td{
 font-size: 0.8em;
@@ -25,38 +24,49 @@ vertical-align:bottom;
 .grabbable{
 position: relative;
 }
+.mask{
+position: fixed;
+left: 0px;
+top: 0px;
+z-index: 999;
+height: 100%; 
+width: 100%; 
+pointer-events: none;
+}
 
 .tilewall[tilemoving]{
 cursor: move;
 }
 .bar{
-position: fixed;
-top: 20px;
-bottom: 20px;
-background: #000;
-width: 9px;
-left: 353px;
+height:100%;
+float: left;
+background: #eee;
+width: 5px;
+border: 1px solid #777;
+border-top: 0px;
+border-bottom: 0px;
+cursor: ew-resize;
 }
 .bar[state="closed"]{
 left: 0px;
 }
 .bar:hover{
-width: 15px;
-background: #500;
-border: 2px solid #fff;
-left: 348px;
+background: #ddd;
+border-color: #000;
 }
-.bar:hover[state="closed"]{
-left: -3px;
+.main_wrapper{
+position: fixed;
+top: 0px;
+left: 0px;
+height: 100%;
+width: 100%;
 }
 .side_panel{
-position: fixed;
-left:0px;
-top:0px;
 display: table;
-border-spacing: 5px;
+border-spacing: 2px;
 width: 355px;
 height: 100%;
+float: left;
 }
 .side_panel[state="closed"]{
 display: none;
@@ -64,7 +74,6 @@ display: none;
 .side_panel_row{
 display:table-row;
 overflow:auto;
-background: #EEE;
 position: relative;
 -webkit-user-select: none;
 -khtml-user-select: none;
@@ -273,12 +282,7 @@ font-weight: bold;
 color: #500;
 }
 .tilewall{
-position: fixed;
-top: 5px;
-bottom: 5px;
-right: 5px;
 padding: 5px;
-background: #EEE;
 overflow-y:auto;
 overflow-x:hidden;
 -webkit-user-select: none;
@@ -287,10 +291,18 @@ overflow-x:hidden;
 -o-user-select: none;
 user-select: none;
 cursor: default;
-left: 365px;
 }
-.tilewall[state="closed"]{
-left: 10px;
+.row_title{
+font-weight: bold;
+display: block;
+background: #eee;
+border-bottom: 1px solid #e8e8e8;
+cursor: pointer;
+box-shadow: 0px -2px 6px rgba(0,0,0,0.2);
+padding-left: 5px;
+}
+.row_title:hover{
+background: #e5e5e5;
 }
 ::-webkit-scrollbar {
 width: 10px;
@@ -302,9 +314,8 @@ height: 0;
 display: none;
 }
 ::-webkit-scrollbar-thumb {
-background-color: #999;
--webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.8),
-					inset 0 -1px 0 rgba(0,0,0,0.3);
+background-color: rgba(0,0,0,0.2);
+-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
 }
 
 .button_group {
@@ -317,26 +328,22 @@ font-size: 12px;
 }
 
 .button{
-background: #CCC;
+background: #f5f5f5;
 text-align: center;
 padding: 5px 10px 5px 10px;
 margin: 2px;
 display: inline-block;
-cursor: default;
-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.5), 0 1px 0 rgba(255, 255, 255, 0.9) inset, 0 -1px 0 rgba(255, 255, 255, 0.3) inset;
-border-radius: 4px;
+border: 1px solid #ccc;
 cursor: pointer;
 }
 .button[checked],
 .button[active]{
-background: #DDD;
+background: #ffffe0;
 border: 1px #000 solid;
-padding: 4px 9px 4px 9px;
 }
 .button:hover{
 color: #C77;
 border: 1px #C77 solid;
-padding: 4px 9px 4px 9px;
 }
 
 input[type="text"]{
@@ -535,6 +542,7 @@ border: solid 2px #000;
 padding: 5px;
 display:none;
 z-index:100;
+cursor: move;
 }
 .grabbed_info{
 min-width: initial;
