--- a/main.css
+++ b/main.css
@@ -665,16 +665,32 @@ user-select: none;
 .autocut_info{
 max-width: none;
 }
+.cluster-sticker,
 .tile-sticker{
-position: absolute;
-right: 2px;
-top: 2px;
 width: 20px;
 height: 17px;
 border: 1px solid #000;
 text-align: center;
 font-size: 0.8em;
 padding-top: 3px;
+}
+.tile-sticker{
+position: absolute;
+right: 2px;
+top: 2px;
+}
+.cluster-sticker{
+margin: 2px;
+display: inline-block;
+}
+.cluster_painter{
+float:left;
+}
+#painter-src{
+display: inline-block;
+}
+.cluster_others{
+text-align: right;
 }
 .tile-buttons{
 position: absolute;
