--- a/main.css
+++ b/main.css
@@ -170,10 +170,9 @@ bottom: 0px;
 border-top: 1px solid #000;
 text-align: center;
 }
-.tile:hover:not([moving]):not([splitting]),
 .tile[active]{
 background: #eee;
-border-color: #FFAD33;
+box-shadow: 0px 0px 5px 3px #fc0;
 }
 .tile[proximate]{
 border-color: #8F8;
@@ -184,7 +183,6 @@ background: #FCC;
 .pending:hover{
 background: #FAA;
 }
-.tile:hover .tile-over,
 .tile[active] .tile-over{
 visibility: visible;
 }
@@ -683,6 +681,9 @@ top: 2px;
 margin: 2px;
 display: inline-block;
 cursor: default;
+}
+.cluster-sticker[active]{
+box-shadow: 0px 0px 5px 3px #fc0;
 }
 .cluster_painter{
 float:left;
