--- a/main.css
+++ b/main.css
@@ -14,6 +14,11 @@ body{
     overflow:hidden;
 font-family: sans-serif;
 font-size: 0.8em;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: -moz-none;
+-o-user-select: none;
+user-select: none;
 }
 td{
 font-size: 0.8em;
@@ -39,27 +44,11 @@ position: absolute;
 height: 100%;
 left: 0;
 right: 0;
+min-height: 150px;
 }
 
 .tilewall[tilemoving]{
 cursor: move;
-}
-.bar{
-height:100%;
-float: left;
-background: #eee;
-width: 5px;
-border: 1px solid #777;
-border-top: 0px;
-border-bottom: 0px;
-cursor: ew-resize;
-}
-.bar[state="closed"]{
-left: 0px;
-}
-.bar:hover{
-background: #ddd;
-border-color: #000;
 }
 .main_wrapper{
 position: fixed;
@@ -70,51 +59,13 @@ width: 100%;
 }
 .side_panel{
 width: 355px;
-/*
-display: table;
-border-spacing: 2px;
-height: 100%;
-float: left;*/
-}
-.side_panel[state="closed"]{
-display: none;
 }
 
 
 .side_panel_row{
-position: relative;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: -moz-none;
--o-user-select: none;
-user-select: none;
-overflow-y: hidden;
-overflow-x: hidden;
-/*
-display:table-row;
-overflow:auto;
-*/
+overflow: hidden;
 }
 
-/*
-.last_side_panel_row_inner{
-left:0px;
-top:0px;
-display: table;
-border-spacing: 0px;
-width: 100%;
-height: 100%;
-}
-.last_side_panel_row_head{
-display:table-row;
-overflow:auto;
-}
-.last_side_panel_row_body{
-display:table-row;
-overflow:auto;
-height: 100%;
-}
-*/
 .button_area{
 min-height: 20px;
 max-height: 100px;
@@ -125,7 +76,6 @@ overflow-y: scroll;
 width: 100%;
 }
 #files_panel{
-/*max-height: 300px;*/
 overflow-x: hidden;
 }
 #info_panel{
@@ -135,12 +85,12 @@ max-height: 400px;
 .side_panel_row:last-of-type{
 height: 100%;
 }
+.above_scrolled_area{
+box-shadow: 0px 3px 10px 0px #bbb;
+position: relative;
+}
 .scrollable_area{
 overflow-y: scroll;
-/*
-height: 100%;
-position: relative;
-*/
 }
 .tile{
 border: 1px solid #CCC;
@@ -604,11 +554,6 @@ padding-right: 5px;
 .file_group{
 display: block;
 text-align: left;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: -moz-none;
--o-user-select: none;
-user-select: none;
 }
 
 
