--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
+/* 
 * {
     padding: 0;
     margin: 0;
 }
+*/
 p,ul,ol{
 margin-top: 6px;
 margin-bottom: 6px;
@@ -19,6 +21,17 @@ font-size: 0.8em;
 -moz-user-select: -moz-none;
 -o-user-select: none;
 user-select: none;
+}
+.main_toolbar{
+display:none;
+background: #efefef;
+box-shadow: inset 0 0 2px 1px #ccc;
+}
+.menu_toggle{
+position: fixed;
+top: 8px;
+right: 16px;
+background: #efefef;
 }
 td{
 font-size: 0.8em;
@@ -255,7 +268,6 @@ overflow-x:hidden;
 -o-user-select: none;
 user-select: none;
 cursor: default;
-height: 100%;
 position: relative;
 }
 .row_title{
@@ -499,8 +511,8 @@ border: 1px solid #000;
 position: fixed;
 top: 0px;
 left: 0px;
-transform: translate(400px,20px);
--webkit-transform: translate(400px, 20px);
+transform: translate(400px,100px);
+-webkit-transform: translate(400px, 100px);
 min-width: 200px;
 max-width: 400px;
 background-color: rgba(255,255,255,0.8);
