--- a/main.css
+++ b/main.css
@@ -495,6 +495,9 @@ visibility: visible;
 	text-align: center;
 	cursor: none;
 }
+.floatinginfo #cluster_panel{
+	cursor: inherit;
+}
 #cluster_panel > canvas{
 margin: 2px;
 border: 1px solid #000;
