info summary showing times

--- a/main.css
+++ b/main.css
@@ -22,6 +22,19 @@ font-size: 0.8em;
 -o-user-select: none;
 user-select: none;
 }
+.info_summary{
+    position: absolute;
+	margin: 3px;
+	padding: 3px;
+	top: 0px;
+	background: rgba(255,255,255,0.5);
+	border: 1px solid #000;
+	-webkit-transition: opacity 0.5s ease-in-out;
+   -moz-transition: opacity 0.5s ease-in-out;
+	-ms-transition: opacity 0.5s ease-in-out;
+	 -o-transition: opacity 0.5s ease-in-out;
+		transition: opacity 0.5s ease-in-out;
+}
 .hidden_clipboard{
 opacity: 0;
 position: absolute;
@@ -75,13 +88,9 @@ left: 0px;
 height: 100%;
 width: 100%;
 }
-.side_panel{
-width: 355px;
-}
-
-
 .side_panel_row{
 overflow: hidden;
+position: relative;
 }
 
 .button_area{
