ratemap params ui

--- a/main.css
+++ b/main.css
@@ -119,6 +119,9 @@ position: relative;
 .scrollable_area{
 overflow-y: scroll;
 }
+.slider_val{
+font-weight: bold;
+}
 .tile{
 border: 1px solid #CCC;
 display: inline-block;
