--- a/main.css
+++ b/main.css
@@ -696,6 +696,11 @@ background-color:rgba(255,255,255,0.85);
 box-shadow: -3px 0px 6px #ddc;
 }
 
+#eegspect{
+display:block;
+margin-top: 4px;
+}
+
 .grabbed_info .tile-buttons{
 display: none;
 }
