--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@ font-size: 0.8em;
 -o-user-select: none;
 user-select: none;
 }
+#all_below_toolbar.no_focus{
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,#83966e), color-stop(10%,#ffffff), color-stop(90%,#ffffff), color-stop(100%,#83966e));
+}
 .info_summary{
     position: absolute;
 	margin: 3px;
