--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ user-select: none;
 	top: 0px;
 	background: rgba(255,255,255,0.5);
 	-webkit-transition: opacity 0.5s ease-in-out;
-   -moz-transition: opacity 0.5s ease-in-out;
+   -moz-transition: opacity 0.5s easee-in-out;
 	-ms-transition: opacity 0.5s ease-in-out;
 	 -o-transition: opacity 0.5s ease-in-out;
 		transition: opacity 0.5s ease-in-out;
@@ -395,61 +395,7 @@ button:active{
 background: #900;
 border-color: #000;
 }
-.help_background{
-position: fixed;
-left:0px;
-right:0px;
-top:0px;
-bottom:0px;
-background: #000;
-opacity:0.5;
-z-index: 101;
-}
-.help_panel_wrapper{
-position: absolute;
-top: 10px;
-bottom: 10px;
-left: 0px;
-right: 0px;
-z-index: 102;
-}
-.help_panel{
-position: relative;
-margin: 0 auto;
-max-width: 640px;
-min-width: 200px;
-background: #FFF;
-height: 100%;
-}
-.close_help_button{
-position: absolute;
-top: 5px;
-right: 5px;
-}
-.help_title{
-position: absolute;
-top: 5px;
-left: 5px;
-right: 80px;
-background: #DDD;
-margin: 2px;
-padding: 5px;
-border: 1px solid #000;
-font-weight: bold;
-}
-.help_body{
-position: absolute;
-top: 45px;
-left: 5px;
-right: 5px;
-bottom: 2px;
-overflow-y: scroll;
-margin-left: 20px;
-padding-right: 20px;
-}
-.notes{
-font-size:0.8em;
-}
+
 .file_group_title{
 font-weight: bold;
 }
@@ -511,9 +457,6 @@ float: right;
 font-size: 0.8em;
 }
 
-.separator_half{
-    display: inline-block;
-}
 #cluster_panel{
 	text-align: center;
 	cursor: none;
@@ -568,13 +511,6 @@ pre{
 font-size: 1.2em;
 margin-left: 15px;
 }
-#filesystem_buttons{
-position: absolute;
-left: 20px;
-bottom: 20px;
-text-align: left;
-display: none;
-}
 .tetrode_title{
 display: inline-block;
 padding-right: 5px;
@@ -585,78 +521,6 @@ text-align: left;
 }
 
 
-.tree{
-  border: 0px;
-  text-align:center;
-  border-collapse:collapse;
-  cursor: default;
- line-height: 0.65;
- letter-spacing: -1px;
-}
-.tree .node{
-    position: relative;
-}
-
-.tree .node:hover{
-   color: #F00;
-}
-.tree .node[modtwo="0"]:after{ /* due to empty tds cannot use nth of type selectors */
-  height: 1px;
-  background: #c00;
-  content: "";
-  width: 50%;
-  display: block;  
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-.tree .node[modtwo="1"]:after{
-  height: 1px;
-  background: #c00;
-  content: "";
-  width: 50%;
-  position: absolute;
-  top: 0px;
-  left: 50%;
-  display: block;  
-}
-.tree .node:before{
-  height: 100%;
-  background: #c00;
-  content: "";
-  width: 1px;
-  position: absolute;
-  left:50%;
-  display: block;
-  top:0px;
-  z-index:-1;
-}
-.tree .node[isroot]:before{
-  height: 50%;
-  background: #c00;
-  content: "";
-  width: 1px;
-  position: absolute;
-  left:50%;
-  display: block;
-  top:50%;
-  z-index:-1;
-}
-.tree .node[colspan="1"]:before{
-  height: 50%;
-  background: #c00;
-  content: "";
-  width: 1px;
-  position: absolute;
-  left:50%;
-  display: block;
-  top:0px;
-  z-index:-1;
-}
-
-.autocut_info{
-max-width: none;
-}
 .cluster-sticker{
 width: 20px;
 height: 17px;
