--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ user-select: none;
 	top: 0px;
 	background: rgba(255,255,255,0.5);
 	-webkit-transition: opacity 0.5s ease-in-out;
-   -moz-transition: opacity 0.5s easee-in-out;
+   -moz-transition: opacity 0.5s ease-in-out;
 	-ms-transition: opacity 0.5s ease-in-out;
 	 -o-transition: opacity 0.5s ease-in-out;
 		transition: opacity 0.5s ease-in-out;
