--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@ user-select: none;
 }
 #all_below_toolbar{
   position: relative;
+  flex: 2;
+  display: flex;
+  flex-direction: row;
 }
 .keyboard_focus_notifier.ease{
   transition: border-color 0.3s ease-in-out;
@@ -108,10 +111,24 @@ top: 0px;
 left: 0px;
 height: 100%;
 width: 100%;
+display: flex;
+flex-direction: column;
+}
+.side_panel{
+  display: flex;
+  flex-direction: column;
+}
+.side_panel_row_flex{
+  flex: 2;
 }
 .side_panel_row{
 overflow: hidden;
 position: relative;
+display: flex;
+flex-direction: column;
+}
+.side_panel_row:last-of-type{
+flex: 2;
 }
 /*shake css from daneden.me */
 @-webkit-keyframes shake{0%,100%{-webkit-transform:translateX(0)}10%,30%,50%,70%,90%{-webkit-transform:translateX(-10px)}20%,40%,60%,80%{-webkit-transform:translateX(10px)}}
@@ -311,6 +328,7 @@ font-weight: bold;
 color: #500;
 }
 .tilewall{
+flex: 2;
 padding: 5px;
 overflow-y:auto;
 overflow-x:hidden;
